#Fix: TerraformService 내 상태파일 오류 수정