@@ -1,13 +1,11 @@
 package AIWA.McpBackend.service.terraform;
 
 import AIWA.McpBackend.service.aws.s3.S3Service;
-import com.amazonaws.services.s3.AmazonS3;
 import lombok.RequiredArgsConstructor;
 import net.schmizz.sshj.SSHClient;
 import net.schmizz.sshj.common.IOUtils;
 import net.schmizz.sshj.connection.channel.direct.Session;
 import net.schmizz.sshj.transport.verification.PromiscuousVerifier;
-import net.schmizz.sshj.userauth.keyprovider.KeyProvider;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
@@ -45,66 +43,60 @@ public class TerraformService {
      */
     public void executeTerraform(String userId) throws Exception {
         String userPrefix = "users/" + userId + "/";
-
-        // 1. S3에서 모든 파일 목록 가져오기
         List<String> fileKeys = s3Service.listAllFiles(userId);
         if (fileKeys.isEmpty()) {
             throw new Exception("S3에 Terraform 관련 파일이 없습니다: " + userPrefix);
         }
 
-        // 2. PEM 파일을 S3에서 다운로드
-        String pemKeyPath = "ssh/aiwa-tf-test.pem"; // S3 내 PEM 파일 경로
-        String pemContent = s3Service.getFileContent(pemKeyPath); // PEM 파일 다운로드
-
-        // 3. 임시 디렉토리 생성
+        String pemKeyPath = "ssh/aiwa-tf-test.pem";
+        String pemContent = s3Service.getFileContent(pemKeyPath);
         File tempDir = Files.createTempDirectory("terraform_" + userId).toFile();
         tempDir.deleteOnExit();
-
-        // 4. PEM 파일을 임시 디렉토리에 저장
         File pemFile = new File(tempDir, "aiwa-tf-test.pem");
-        Files.write(pemFile.toPath(), pemContent.getBytes(StandardCharsets.UTF_8));
-        pemFile.setReadable(true); // 읽기 권한 설정
+        Files.writeString(pemFile.toPath(), pemContent);
+        pemFile.setReadable(true);
 
-        // 5. 모든 파일 다운로드
         for (String key : fileKeys) {
             String relativePath = key.substring(userPrefix.length());
             File localFile = new File(tempDir, relativePath);
             localFile.getParentFile().mkdirs();
             String content = s3Service.getFileContent(key);
-            Files.write(localFile.toPath(), content.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(localFile.toPath(), content);
         }
 
         SSHClient ssh = new SSHClient();
-        ssh.addHostKeyVerifier(new PromiscuousVerifier()); // 보안상 위험, 실제 운영 환경에서는 호스트 키 검증을 설정하세요.
+        ssh.addHostKeyVerifier(new PromiscuousVerifier());
 
         try {
-            // 6. SSH 연결 및 인증 (PEM 파일 사용)
             ssh.connect(remoteHost, remotePort);
-            // KeyProvider 사용하여 PEM 키 인증
-            ssh.authPublickey(remoteUsername, pemFile.getAbsolutePath()); // PEM 파일 사용
+            ssh.authPublickey(remoteUsername, pemFile.getAbsolutePath());
 
-            // 7. 원격 디렉토리 설정
             String remoteDir = "/home/" + remoteUsername + "/terraform/" + userId;
             executeRemoteCommand(ssh, "mkdir -p " + remoteDir);
-
-            // 8. 로컬 디렉토리의 모든 파일을 원격 디렉토리에 업로드
             uploadDirectory(ssh, tempDir, remoteDir);
 
-            // 9. Terraform 명령 실행
-            executeRemoteCommand(ssh, "cd " + remoteDir + " && terraform init");
-            executeRemoteCommand(ssh, "cd " + remoteDir + " && terraform apply -auto-approve");
+            // Terraform 실행 전 잠금 해제 체크
+            // Terraform 실행 명령
+            String initCommand = "cd " + remoteDir + " && terraform init";
+            String applyCommand = "cd " + remoteDir + " && terraform apply -auto-approve";
 
-            // 10. 상태 파일 다운로드
+            // 에러 처리
+            try {
+                executeRemoteCommand(ssh, initCommand);
+                executeRemoteCommand(ssh, applyCommand);
+            } catch (IOException e) {
+                // 상태 파일 잠금 해제 관련 로직 추가
+                // 예: 명령어로 잠금 해제 시도
+                throw new Exception("Terraform 실행 중 오류 발생: " + e.getMessage(), e);
+            }
+
             String tfStateRemotePath = remoteDir + "/terraform.tfstate";
             File tfStateFile = File.createTempFile("terraform.tfstate", null);
             ssh.newSCPFileTransfer().download(tfStateRemotePath, tfStateFile.getAbsolutePath());
 
-            // 11. 상태 파일을 S3에 업로드
             String tfStateS3Key = userPrefix + "terraform.tfstate";
-            String tfStateContent = new String(Files.readAllBytes(tfStateFile.toPath()), StandardCharsets.UTF_8);
+            String tfStateContent = Files.readString(tfStateFile.toPath());
             s3Service.uploadFileContent(tfStateS3Key, tfStateContent);
-
-            // 12. 원격 디렉토리 삭제
             executeRemoteCommand(ssh, "rm -rf " + remoteDir);
 
         } catch (IOException e) {
@@ -117,7 +109,6 @@ public class TerraformService {
             } catch (IOException e) {
                 // 연결 종료 중 예외 발생 시 무시
             }
-            // 임시 디렉토리 삭제
             deleteDirectoryRecursively(tempDir);
         }
     }
